// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offsetPath renders 0 1`] = `
Array [
  .c0 {
  offset-path: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: 0;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders function 1`] = `
Array [
  .c0 {
  offset-path: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: has;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: has;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders invalid theme path 1`] = `
Array [
  .c0 {
  offset-path: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders negative number 1`] = `
Array [
  .c0 {
  offset-path: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    offset-path: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-path: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    offset-path: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-path: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-path: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-path: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    offset-path: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    offset-path: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    offset-path: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    offset-path: July;
  }
}

@media April {
  .c0 {
    offset-path: August;
  }
}

@media January {
  .c0 {
    offset-path: September;
  }
}

@media April {
  .c0 {
    offset-path: November;
  }
}

@media June {
  .c0 {
    offset-path: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    offset-path: July;
  }
}

@media April {
  .c0 {
    offset-path: August;
  }
}

@media January {
  .c0 {
    offset-path: September;
  }
}

@media April {
  .c0 {
    offset-path: November;
  }
}

@media June {
  .c0 {
    offset-path: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-path: January;
  }
}

@media April {
  .c0 {
    offset-path: December;
  }
}

@media January {
  .c0 {
    offset-path: April;
  }
}

@media April {
  .c0 {
    offset-path: May;
  }
}

@media June {
  .c0 {
    offset-path: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    offset-path: January;
  }
}

@media April {
  .c0 {
    offset-path: December;
  }
}

@media January {
  .c0 {
    offset-path: April;
  }
}

@media April {
  .c0 {
    offset-path: May;
  }
}

@media June {
  .c0 {
    offset-path: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders postitive number 1`] = `
Array [
  .c0 {
  offset-path: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders string 1`] = `
Array [
  .c0 {
  offset-path: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: July;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: June;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: June;
}

<div
    className="c0"
  />,
]
`;

exports[`offsetPath renders valid theme path 1`] = `
Array [
  .c0 {
  offset-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  offset-path: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
